# feature_zoo

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  visualize_embeddings.ipynb
configs/: config.yaml  gpt2.yaml  olmo3-32b-base.yaml  olmo3-7b-instruct.yaml  test.yaml
configs/data/: days.yaml  days_21k.yaml
configs/exp/: final.yaml
configs/filter/: days_fineweb.yaml  days_fineweb_big.yaml
configs/llm/: gpt2.yaml  llama3.1-8b-base.yaml  olmo3-32b-base.yaml  olmo3-7b-base.yaml  olmo3-7b-instruct.yaml
configs/sae/: gpt2_relu.yaml  llama3.1-8b-base_batchtopk copy.yaml  llama3.1-8b-base_batchtopk.yaml  llama3.1-8b-base_temporal.yaml  llama3.1-8b-base_topk.yaml
data/texts/: days.csv  days_dataset_weekday_only.json  days_filtered.csv  days_filtered_21k.csv  days_templates_100_single_placeholder.csv
exp/: sae_inference.ipynb  visualize_embeddings.ipynb
exp/weekdays/: Engels_EXPERIMENT_GUIDE.md  temporal_clusters.json  weekdays.ipynb
scripts/: convert_gpt2_sae_to_standard.py  hf_download_artifacts.sh  hf_upload_artifacts.sh  load_trained_saes.sh
src/: activation_cache.py  cache_llm.py  cache_sae.py  config.py  filter_corpus.py  generate_days_dataset.py  loading.py  tokenization.py
tests/: dummy_config.yaml  test_activation_cache.py  test_cache_sae.py  test_config.py  test_generate_days_dataset.py  test_tokenization.py
