[project]
name = "feature-zoo"
version = "0.1.0"
description = "A collection of multidimensional features in language models."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "transformers>=4.57.3",
    "pyyaml>=6.0",
    "torch>=2.9.1",
    "safetensors>=0.4.0",
    "accelerate>=1.12.0",
    "ipykernel>=7.1.0",
    "scikit-learn>=1.8.0",
    "plotly>=6.5.0",
    "nbformat>=5.10.4",
    "datasets>=4.4.1",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "bitsandbytes>=0.49.0",
    "temporal-feature-analysis",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
temporal-feature-analysis = { path = "../TemporalFeatureAnalysis", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]
